# backstage_django

./: .gitignore  .gitmodules  .pylintrc  Makefile  README.md  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
apps/custom_auth/: adapters.py  authentication.py  serializers.py  urls.py  views.py
apps/health/: serializers.py  urls.py  views.py
apps/rbac/: admin.py  urls.py
apps/rbac/management/commands/: init_rbac_data.py
apps/rbac/models/: __init__.py  permissions.py  roles.py
apps/rbac/openapi/: __init__.py  permissions.py  roles.py
apps/rbac/serializers/: __init__.py  permissions.py  roles.py
apps/rbac/views/: permissions.py  roles.py
apps/users/: admin.py  filters.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  validators.py  views.py
apps/users/openapi/: __init__.py  users.py
apps/users/tests/: conftest.py  factories.py  test_models.py  test_tasks.py
compose/local/django/: Dockerfile  entrypoint.sh
compose/local/django/celery/: entrypoint.sh
compose/local/django/celery/beat/: start.sh
compose/local/django/celery/worker/: start.sh
compose/production/django/: Dockerfile  entrypoint.sh  start.sh
compose/production/django/celery/: entrypoint.sh
compose/production/django/celery/beat/: start.sh
compose/production/django/celery/flower/: start.sh
compose/production/django/celery/worker/: start.sh
core/: asgi.py  celery.py  settings.py  urls.py
core/exceptions/: exception_handler.py  exceptions.py
docs/: 快速開始.md  日誌工具.md  服務監控.md  異步任務.md  設計說明.md
envs/: .dev-sample
utils/: cache_utils.py  mixins.py  pagination.py  response.py  serializers.py  throttles.py  token_service.py  validators.py
utils/notification/: email_service.py  sms_services.py
